--- a/style.css
+++ b/style.css
@@ -582,6 +582,11 @@ body {
     width: 5%;
 }
 
+.segment.bottom-5 span,
+.segment.top-5 span {
+    display: none;
+}
+
 .segment.p5-25 {
     background: var(--accent-coral);
     width: 20%;
